force-app/main/default/objects/MAS_CFE_Configuration__c/fields/Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Developer_Name__c</fullName>
    <label>Developer Name</label>
    <type>Text</type>
    <length>80</length>
    <unique>true</unique>
    <externalId>true</externalId>
    <description>Stable API-safe key used to invoke this configuration programmatically (e.g. from a Flow via MAS_CFE_RunConfigInvocable).</description>
</CustomField>