force-app/main/default/objects/MAS_CFE_Configuration__c/fields/Last_Run_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_Status__c</fullName>
    <label>Last Run Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Running</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Completed with Errors</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>