force-app/main/default/objects/MAS_CFE_Configuration__c/fields/Schedule_Description__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Description__c</fullName>
    <label>Schedule Description</label>
    <type>Text</type>
    <length>255</length>
    <description>Plain-English summary of Schedule_Cron__c (e.g. "Daily at 6:00 AM"), stamped by MAS_CFE_ConfigController.saveSchedule via MAS_CFE_Utils.describeCron. Not user-editable in the UI.</description>
</CustomField>